# internal/dto/task.go
@@ -10,6 +10,11 @@ type TaskResponse struct {
 	EndDate   time.Time `json:"end_date" time_format:"2006-01-02"`
 }
 
+type TaskDetailResponse struct {
+	TaskResponse
+	Assignments []AssignmentResponse `json:"assignments"`
+}
+
 type UpdateTaskRequest struct {
 	Title     *string    `json:"title"`
 	StartDate *time.Time `json:"start_date" time_format:"2006-01-02"`
